@startuml
title Class Diagram - UC26: Quản lý yêu cầu trả phòng

skinparam {
    ClassBackgroundColor White
    ClassBorderColor #2D3E50
    ArrowColor #2D3E50
    DefaultFontName "Arial"
    DefaultFontSize 16
    ClassBorderThickness 2
    StereotypeFontColor #2D3E50
    Padding 5
}

class "ScreenManageCheckoutRequest" <<boundary>> {
  - dgvRequests: DataGridView
  + show(): void
}

class "ModalCreateCheckoutRequest" <<boundary>> {
  - txtSearchUser: TextBox
  - cbbContractList: ComboBox
  - dtpExpectedDate: DateTimePicker
  - btnSave: Button
  - btnSearch: Button
  - btnBack: Button
  + show(): void
  + btnSaveClick(): void
}

class "ModalCheckoutRequestDetail" <<boundary>> {
  - lblContractInfo: Label
  - lblRefundInfo: Label
  - btnProcess: Button
  - btnReject: Button
  - btnBack: Button
  + show(requestId: string): void
}

class "CheckoutRequest" <<control>> {
  - requestId: string
  - code: string
  - userEmail: string
  - rentalFormId: string
  - expectedDate: string
  - status: CheckoutStatus
  - createdAt: string
  + <<static>> getList(): CheckoutRequest[]
  + <<static>> getById(requestId: string): CheckoutRequest 
  + <<static>> createWithDuplicateCheck(data: CheckoutRequest): {success: bool, request: CheckoutRequest}
  + <<static>> updateStatus(requestId: string, status: CheckoutStatus, expectedStatus: CheckoutStatus): bool
}

class "Contract" <<control>> {
  - contractId: string
  - rentalFormId: string
  - startDate: string
  - stayDuration: number
  - status: ContractStatus
  + <<static>> getByRentalFormId(rentalFormId: string): Contract 
}

class "Rental" <<control>> {
  - rentalFormId: string
  - userEmail: string
  - type: string
  - totalAmount: number
  + <<static>> getRentalFormById(rentalFormId: string): Rental
  + <<static>> getBedsInfoByRentalFormId(rentalFormId: string): {roomId: string, bedIds: string[]}
}

class "RefundCalculation" <<control>> {
  - calculationId: string
  - requestId: string
  - rentalFormId: string
  - depositAmount: number
  - damageFee: number
  - extraFee: number
  - finalRefundAmount: number
  - notes: string
  - createdAt: string
  + <<static>> getByRequestId(requestId: string): RefundCalculation 
}

class "CheckoutRequestDB" <<entity>> {
  + <<static>> getAll(): CheckoutRequest[]
  + <<static>> getById(requestId: string): CheckoutRequest
  + <<static>> insertIfNoActiveRequest(request: CheckoutRequest, rentalFormId: string, userEmail: string): {success: bool, error: string, requestId: string}
  + <<static>> updateStatus(id: string, status: string, expectedStatus?: string): bool
}

class "ContractDB" <<entity>> {
  + <<static>> getByRentalFormId(rentalFormId: string): Contract 
}

class "RentalDB" <<entity>> {
  + <<static>> getRentalFormById(rentalFormId: string): Rental
  + <<static>> getBedsInfoByRentalFormId(rentalFormId: string): {roomId: string, bedIds: string[]}
}

class "RefundCalculationDB" as RefundCalculationDB <<entity>> {
  + <<static>> getByRequestId(requestId: string): RefundCalculation 
}

ScreenManageCheckoutRequest --> CheckoutRequest
ModalCreateCheckoutRequest --> CheckoutRequest
ModalCreateCheckoutRequest --> Rental
ModalCheckoutRequestDetail --> CheckoutRequest
ModalCheckoutRequestDetail --> Rental
ModalCheckoutRequestDetail --> Contract
ModalCheckoutRequestDetail --> RefundCalculation

CheckoutRequest --> CheckoutRequestDB
Rental --> RentalDB
Contract --> ContractDB
RefundCalculation --> RefundCalculationDB

@enduml
